<resources>
    <string name="app_name">Food Analyzer Bot</string>
    <string name="action_settings">Settings</string>
    <string name="wellcome_message">FoodAnalyzer\n Bot</string>
    <string name="fudy_button_title">Fudy</string>
    <string name="random_wallpaper_button_title">Random WallPaper</string>
    <string name="send_button_title">Send</string>
    <string name="input_text_hint">Say something to Fudy</string>
    <string name="nameEditTextHint">Enter name</string>
    <string name="accept_button_text">Accept</string>
    <string name="description_dialog_text">Please, enter a user name for your account</string>
    <string name="title_dialog_text">Wellcome to the FoodAnalyzer Bot!</string>
</resources>
